Update to new upstream release 14.0.0
The startup script needs a few jvm parameters, otherwise the program will
complain with info boxes. The minimal java version is now 20. Since the
startup script uses the openjdk path it is fair to have an openjdk jre as
dependency.